DeploymentStaging/deployPackage/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Last_Work_Order_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Work Order Activity</label>
        <referenceTo>Work_Order_Activity__c</referenceTo>
        <relationshipLabel>Contacts (Last Work Order Activity)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tradesman_Start_Work_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tradesman Start Work Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tradesman_Status_Coordinate__c</fullName>
        <label>Tradesman_Status_Coordinate</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Tradesman_Still_Working__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to enable if Tradesman are still working? Enables when Tradesman starts work.</description>
        <label>Tradesman Still Working?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>